Create directory endpoint
